enlazando index y cambiando el mensaje del script

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <p>Lorem ipsum dolor sit amet computadora controladora comandante dalto weimar consectetur adipisicing elit. Deleniti itaque nostrum sed minus! Repudiandae fugit ea, facilis ab impedit saepe error itaque rerum debitis ad, dolores dolore mollitia? Veniam, illo?</p>
+    <script src="js/script.js"></script>
 </body>
 </html>
