modificando el script.js

--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina de prueba en curso de VSC Dalto</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Mi pagina Web</title>
 </head>
 <body>
-    <p>Lorem ipsum dolor sit amet computadora controladora comandante dalto weimar consectetur adipisicing elit. Deleniti itaque nostrum sed minus! Repudiandae fugit ea, facilis ab impedit saepe error itaque rerum debitis ad, dolores dolore mollitia? Veniam, illo?</p>
-    <script src="js/script.js"></script>
-</body>
+    <!-- header.header>nav.header-nav>ul.header-ul>li.list-item*2>a.link -->
+    <header class="header">
+        <nav class="header-nav">
+            <ul class="header-ul">
+                <li class="list-item"><a href="https://youtube.com" class="link">Youtube</a></li>
+                <li class="list-item"><a href="https://google.com" class="link">google</a></li>
+            </ul>
+        </nav>
+    </header>
+</body> 
 </html>
